update tests to reflect Openbabel being used first for conversion. formatting. Re-enable integration test for conversion to smiles as a sanity test for converting the most used files. formatting